# turborvb

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake/: CMakeLists.txt  FindQMCKL.cmake  FindQMCKL_GPU.cmake  FindSCALAPACK.cmake  FindTREXIO.cmake
cmake/compilers/: CMakeLists.txt
src/a_convertfort10/: CMakeLists.txt  convertfort10.f90
src/a_convertfort10mol/: CMakeLists.txt  convertfort10mol.f90
src/a_convertfortpfaff/: CMakeLists.txt  convertpfaff.f90
src/a_makefort10/: CMakeLists.txt  constants2.f90  cubicsym.f90  error_handler.f90  findsection.f90  intc.f90  invmat.f90  kind.f90  makeforces.f90  makefort10.f90  makefort10.howitworks  makelambda.f90  makepfaff.f90  orbitals.f90  symm_data.f90
src/a_module_tests/: CMakeLists.txt  c_lister.c  c_lister.h  offload_code_assessment_complex.f90  offload_code_assessment_real.f90  offload_code_forcycle_complex.f90  offload_code_forcycle_real.f90  offload_data_complex.f90  offload_data_real.f90  offload_if.f90  offload_pointer_transcription.f90  openmp_parallel.f90  openmp_reduction_complex.f90  openmp_reduction_nested_real.f90  openmp_reduction_real.f90  test_dgemm.f90  test_dgemm_b.f90  test_dgemv.f90  test_dgemv_.f90  test_dgemv_offload.f90  test_dgemvt.f90  test_dger.f90  test_dger2.f90  test_dgetrf.f90  test_dgetrfi.f90  test_dskmv.f90  test_dtrsm.f90  test_makefun.f90  test_upwinvp.f90  test_upwinvp_complex.f90  test_zdotc.f90  test_zgemm.f90  test_zgemm_b.f90  test_zgemv.f90  test_zgemv_offload.f90  test_zger.f90  test_zger2.f90  test_zgeru.f90  test_zgetrf.f90  test_zgetrfi.f90  (+8 more)
src/a_prep/: CMakeLists.txt  buffers.f90  compute_bands.f90  elec_density.f90  eval_efermi.f90  eval_hamilt.f90  eval_hamilt_complex.f90  f_defs.h  fill_matrix_scalapack.f90  fillbuffer.f90  fourier_mod.f90  freeelmod_complex_kpoints.f90  graham_scalapack.f90  hamiltonian.f90  improve_diag.f90  initialize_environment.f90  initialize_matrices.f90  invsymn.f90  lda.f90  lsda.f90  parallel_mod.f90  pp_nsc.f90  prep.f90  printden.f90  real_complex_routines.f90  setup.f90  update_fort10.f90  upocc_kpoints.f90  writeout_finalize.f90
src/a_readforward/: CMakeLists.txt  CompPW.f90  CompRhok.f90  berry_phase.f90  compute_corr_fun.f90  compute_dipole.f90  compute_grid.f90  compute_qpwf.f90  compute_rho.f90  compute_rho_assar.f90  compute_spin2.f90  cossin.f90  dsort.f90  el_ion_distance.f90  el_ion_distance_2d.f90  el_ion_distance_for_dipole.f90  read_corr_fun.f90  readforward.f90  shells.f90  write_corr_fun.f90
src/a_tools/: CMakeLists.txt  _assembling_pseudo.f90  amoeba_minimization.f90  atom_label.f90  atom_names.f90  atomsorb.f90  cleanfort10.f90  copydet.f90  copyjas.f90  corrcov.f90  corrforza.f90  corrforzap.f90  corrforzap_complex.f90  corrvar.f90  estimator.f90  evsa.f90  exact_diagonalization.f90  find_kpoints.f90  funvsa.f90  intc.f90  orthomol.f90  plot_orbitals.f90  plotlambda.f90  pseudo.f90  readalles.f90  readf.f90  readff.f90  readffn.f90  real_to_complex.f90  shells.f90  zerojasfort10.f90
src/a_turborvb/: CMakeLists.txt  Makefile  adam_opt.f90  add_sincos.f90  adjust_tpar.f90  atom_weight.f90  bootforcecov.f90  bootparameter.f90  bootpress.f90  branchingo.f90  comp_econf.f90  conjginv.f90  conjginv_prep.f90  conjginvs.f90  constants_gausslog.f90  constraint_complex.f90  cutminzmaxz.f90  dgelscut_new.f90  diffus.f90  distribute_column.f90  dsktrs_qp.f90  dsyev_sing_sz.f90  enercont.f90  enercut.f90  enercutoff.f90  energy.f90  enforce_detail.f90  eval_corrpulay.f90  eval_pulay.f90  evalgren.f90  fillmatrix_mitas.f90  gather_avgs.f90  gemm.f90  handle.f90  hopping_pbc.f90  jastrow_exp.f90  main.f90  makeu.f90  mapping_sz.f90  periodic.f90  (+24 more)
src/b_complex/: CMakeLists.txt  Makefile  convertmod.f90  eval_molec_epsdgel.f90  eval_molec_unpaired.f90  fort10_io.f90  read_datas.f90
src/c_adjoint_backward/: CMakeLists.txt  Makefile  adBuffer.f90  compute_fast_b.f90  ddot_b.f90  derfc_b.f90  dgemm_b.f90  dgemv_b.f90  eval_iond_b.f90  jastrow_ee_b.f90  jastrow_ei_b.f90  jastrowgrad_b.f90  jastrowgrad_pbc_b.f90  legfun_b.f90  makefun0_b.f90  makefun0_bump_b.f90  makefun0_pbc_b.f90  makefun_b.f90  makefun_bump_b.f90  makefun_pbc_b.f90  ngivej_b.f90  pseudofun_b.f90  pseudoset_b.f90  subener_b.f90  t_lrdmc_b.f90  up2bodypsi_b.f90  upvpotdiag_b.f90  upwf_b.f90  zgemm_b.f90
src/c_adjoint_forward/: CMakeLists.txt  Makefile  compute_fast.f90  dgesvd.f90  dspev_drv.f90  dsyev.f90  eval_iond.f90  evaldet.f90  evaldet_complex.f90  jastrow_ee.f90  jastrow_ei.f90  jastrowgrad.f90  jastrowgrad_pbc.f90  legfun.f90  makefun.f90  makefun0.f90  makefun0_bump.f90  makefun0_pbc.f90  makefun_bump.f90  makefun_pbc.f90  ngivej.f90  pseudofun.f90  pseudoset.f90  ratiovar.f90  subener.f90  t_lrdmc.f90  up2bodypsi.f90  upinvhop.f90  upinvhop_fnf_new.f90  upvpotdiag.f90  upwf.f90  zgesvd.f90  zsyev.f90
src/d_qlapack/: CMakeLists.txt  License  Makefile  dgemm_tn.f  dgemv.f  dgemvn.f  dgemvt.f  dger.f  dger2.f  getrfi.f  zdotc.f  zgemm_tn.f  zgemv.f  zgemvn.f  zgemvt.f  zger2.f  zgeru.f
test/: CMakeLists.txt  README.md  jobcheck-mpi-np2.sh  jobcheck-serial.sh
test/test_MD_classical_vmc/: CMakeLists.txt  REFERENCE_fortXXI  cm.test1.sh  datasmin.d  gen_mpi_np2_ref.sh  gen_serial_ref.sh
test/test_MD_quantum_vmc/: CMakeLists.txt  cm.test1.sh  datasmin.d  fort.10_ori  gen_mpi_np2_ref.sh  gen_serial_ref.sh
test/test_dft_open/: CMakeLists.txt  REFERENCE_fort.10_new  cm.test.sh  fort.10  prep.d
test/test_dft_open_38_molecules/: CMakeLists.txt  README.md  cm.test.sh  gen_serial_ref.sh
test/test_dft_open_cartesian/: CMakeLists.txt  REFERENCE_fort.10_new  cm.test.sh  fort.10  gen_serial_ref.sh  prep.d
test/test_dft_pbc_gamma/: CMakeLists.txt  REFERENCE_fort.10_new  cm.test.sh  fort.10  prep.d
test/test_dft_pbc_twist_complex/: CMakeLists.txt  REFERENCE_fort.10_new  cm.stest.sh  cm.test.sh  fort.10  gen_serial_ref.sh  prep.d  prep.ds
test/test_dft_pbc_twist_real/: CMakeLists.txt  REFERENCE_fort.10_new  cm.test.sh  fort.10  prep.d
test/test_dgemm_NN128/: A  C  CMakeLists.txt
(+2032 files in other folders)
